RESOLVED FIXED23845
editing/deleting/backward-deletion.html fails on Tiger
https://bugs.webkit.org/show_bug.cgi?id=23845
Summary editing/deleting/backward-deletion.html fails on Tiger
Alexey Proskuryakov
Reported 2009-02-09 05:41:03 PST
This happens because character break iterator works differently in ICU 3.2. Patch forthcoming.
Attachments
proposed fix (1.79 KB, patch)
2009-02-09 05:44 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2009-02-09 05:44:48 PST
Created attachment 27482 [details] proposed fix
Darin Adler
Comment 2 2009-02-09 09:45:34 PST
Comment on attachment 27482 [details] proposed fix The idiom in WebCore is #ifdef BUILDING_ON_TIGER. Please change to that. Normally we'd defined named constants for characters in CharacterNames.h rather than using hex numbers directly. r=me
Alexey Proskuryakov
Comment 3 2009-02-09 10:36:27 PST
Committed revision 40783.
Note You need to log in before you can comment on or make changes to this bug.