        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=23845
        editing/deleting/backward-deletion.html fails on Tiger

        * rendering/RenderText.cpp:
        (WebCore::RenderText::previousOffset):
        (WebCore::RenderText::nextOffset):
        Work around a bug in older ICU versions by hardcoding narrow voiced marks.



Canonical link: https://commits.webkit.org/32909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40783 268f45cc-cd09-0410-ab3c-d52691b4dbfc